// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmarks should render bookmarks dropdown when loaded 1`] = `
<Fragment>
  <SearchModal
    bookmarks={
      Array [
        Object {
          "controller": "architectures",
          "name": "my-bookmark",
          "query": "name ~ 86",
        },
      ]
    }
    controller="architectures"
    onEnter={[Function]}
    setModalClosed={[MockFunction]}
    title="Create Bookmark"
    url="/api/v2/architectures"
  />
  <Dropdown
    dropdownItems={
      Array [
        <DropdownGroup>
          <DropdownItem
            id="newBookmark"
            onClick={[MockFunction]}
          >
            Bookmark this search
          </DropdownItem>
          <DocumentationLink
            href="https://test-docs.com"
          >
            Documentation
          </DocumentationLink>
        </DropdownGroup>,
        <DropdownGroup
          label="Saved Bookmarks"
        >
          <DropdownItem
            onClick={[Function]}
          >
            <EllipisWithTooltip>
              my-bookmark
            </EllipisWithTooltip>
          </DropdownItem>
        </DropdownGroup>,
      ]
    }
    id="architectures"
    isGrouped={true}
    isOpen={false}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
      >
        <BookmarkIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </DropdownToggle>
    }
  />
</Fragment>
`;

exports[`Bookmarks should render bookmarks dropdown when loading 1`] = `
<Fragment>
  <SearchModal
    bookmarks={Array []}
    controller="architectures"
    onEnter={[Function]}
    setModalClosed={[MockFunction]}
    title="Create Bookmark"
    url="/api/v2/architectures"
  />
  <Dropdown
    dropdownItems={
      Array [
        <DropdownGroup>
          <DropdownItem
            id="newBookmark"
            onClick={[MockFunction]}
          >
            Bookmark this search
          </DropdownItem>
          <DocumentationLink
            href="https://test-docs.com"
          >
            Documentation
          </DocumentationLink>
        </DropdownGroup>,
        <DropdownGroup
          label="Saved Bookmarks"
        >
          <DropdownItem
            className="loader-root"
            isDisabled={true}
          >
            <Spinner
              size="xs"
            />
          </DropdownItem>
        </DropdownGroup>,
      ]
    }
    id="architectures"
    isGrouped={true}
    isOpen={false}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
      >
        <BookmarkIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </DropdownToggle>
    }
  />
</Fragment>
`;

exports[`Bookmarks should render when no bookmarks loaded 1`] = `
<Fragment>
  <SearchModal
    bookmarks={Array []}
    controller="architectures"
    onEnter={[Function]}
    setModalClosed={[MockFunction]}
    title="Create Bookmark"
    url="/api/v2/architectures"
  />
  <Dropdown
    dropdownItems={
      Array [
        <DropdownGroup>
          <DropdownItem
            id="newBookmark"
            onClick={[MockFunction]}
          >
            Bookmark this search
          </DropdownItem>
          <DocumentationLink
            href="https://test-docs.com"
          >
            Documentation
          </DocumentationLink>
        </DropdownGroup>,
        <DropdownGroup
          label="Saved Bookmarks"
        >
          <DropdownItem
            isDisabled={true}
          >
            None found
          </DropdownItem>
        </DropdownGroup>,
      ]
    }
    id="architectures"
    isGrouped={true}
    isOpen={false}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
      >
        <BookmarkIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </DropdownToggle>
    }
  />
</Fragment>
`;

exports[`Bookmarks should show error 1`] = `
<Fragment>
  <SearchModal
    bookmarks={Array []}
    controller="architectures"
    onEnter={[Function]}
    setModalClosed={[MockFunction]}
    title="Create Bookmark"
    url="/api/v2/architectures"
  />
  <Dropdown
    dropdownItems={
      Array [
        <DropdownGroup>
          <DropdownItem
            id="newBookmark"
            onClick={[MockFunction]}
          >
            Bookmark this search
          </DropdownItem>
          <DocumentationLink
            href="https://test-docs.com"
          >
            Documentation
          </DocumentationLink>
        </DropdownGroup>,
        <DropdownGroup
          label="Saved Bookmarks"
        >
          <DropdownItem
            isDisabled={true}
          >
            <EllipisWithTooltip>
              Failed to load bookmarks: Random test error
            </EllipisWithTooltip>
          </DropdownItem>
        </DropdownGroup>,
      ]
    }
    id="architectures"
    isGrouped={true}
    isOpen={false}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
      >
        <BookmarkIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </DropdownToggle>
    }
  />
</Fragment>
`;
